--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "build": "next build",
     "clean": "rm -rf node_modules .next bun.lock next-env.d.ts",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.821.0",
@@ -41,8 +44,12 @@
     "sweetalert2": "11.19.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "22.15.3",
     "@types/react": "19.1.2",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "5.8.3"
   }
 }
