--- a/package.json
+++ b/package.json
@@ -44,10 +44,15 @@
     "sweetalert2": "11.19.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.12",
     "@types/node": "22.15.3",
     "@types/react": "19.1.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-environment-node": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "5.8.3"
